# crawley

./: .gitignore  Cargo.toml  README.md
src/: crawly.rs  main.rs  result_publisher.rs
src/client/: crawl_client.rs  error.rs  mod.rs
src/link/: error.rs  link_constructor.rs  mod.rs
src/queue/: already_exists_decider.rs  crawl_queue.rs  mod.rs  queue_addition_decider.rs
src/service/: error.rs  mod.rs  scrape_service.rs
