[package]
name = "crawly"
version = "0.1.0"
authors = ["Senthil V Kumar <me@senthilvkumar.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.0", features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14.7", features = ["client", "http1", "http2"] }
hyper-tls = "0.5.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
select = "0.6.0-alpha.1"
futures = "0.3.15"
derive = "1.0.0"
url = "2.2.2"
async-trait = "0.1.50"
flurry = "0.3.1"
clap = "3.0.0-beta.2"

[dev-dependencies]
mockall = "0.9.1"
wiremock = "0.5.2"